<?xml version="1.0"?>
<package format="2">
  <name>rc_common_msgs</name>
  <version>0.1.0</version>
  <description>Common msg and srv definitions used by Roboception's ROS packages</description>

  <maintainer email="felix.ruess@roboception.de">Felix Ruess</maintainer>

  <license>BSD</license>

  <url type="website">http://roboception.de</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
